# agplib

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
src/: mathutil.hh  module.cpp  module.hh  trimesh.cpp  trimesh.hh  types.hh
src/agplib/: __init__.py  __init__.pyi  py.typed
src/agplib/crossfield/: __init__.py  __init__.pyi
src/agplib/util/: __init__.py  __init__.pyi
src/crossfield/: crossfield.cpp  crossfield.hh  curvature.cpp  curvature.hh  surfacegraph.cpp  surfacegraph.hh
src/patchgraph/: patchgraph.cpp  patchgraph.hh
src/util/: convexhull.cpp  convexhull.hh  misc.cpp  misc.hh  printhelpers.hh  tangentspace.cpp
src/utils/: curvature.cpp  curvature.hh  misc.cpp  misc.hh  tangentspace.cpp  tangentspace.hh
src/wrapper/: bindAGPLib.cpp  bindCrossfield.cpp  bindCrossfield.hh  bindPatchGraph.cpp  bindPatchGraph.hh  bindUtil.cpp  bindUtil.hh  wrapperutils.hh
tests/: test_basics.py  test_classes.py  test_crossfield.py  test_curvature.py  test_trimesh.py
