[metadata]
name = agplib
version = 1.0.0
author = Anton Florey
author_email = anton.florey@googlemail.com
url = https://github.com/AntonFlorey/agplib
description = A Geometry Processing Library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mesh, crossfield, parametrization
license = MIT
classifiers =
    Programming Language :: C++
    Topic :: Multimedia :: Graphics :: 3D Modeling

[options]
zip_safe = False
python_requires = ~=3.11
install_requires =
    numpy

packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.pyi, py.typed